templates/infra_msk_asg.yml.template
AWSTemplateFormatVersion: "2010-09-09"
Description: "PoC Stack for Managed Kafka Clients"
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          Parameters:
            - KeyPair
            - MinSize
            - MaxSize
            - DesiredCapacity

Parameters:
  ProjectName:
    Type: String
    Description: Project Name

  MSKStackName:
    Type: String
    Description: MSK Cluster StackName

  Brokers:
    Type: String
    Description: Comma separated list of brokers e.g (broker1:port,broker2:port)
    AllowedPattern: ".+"

  EC2Ami:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: EC2 AMI ID
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

  MinSize:
    Type: String
    Description: Minimum number of app servers
    Default: "1"

  MaxSize:
    Type: String
    Description: Maximum number of app servers for spikes (Desired x 2)
    Default: "4"

  DesiredCapacity:
    Type: String
    Description: Capacity at normal operating loads
    Default: "2"

  VpcCIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for this VPC
    Type: String
    Default: 10.1.0.0/19

  PublicSubnet1CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.1.0.0/24

  PublicSubnet2CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.1.1.0/24

  PrivateSubnet1CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.1.2.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.1.3.0/24

  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "EC2 Key Pair to allow SSH access to the host"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref ProjectName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref ProjectName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Public Subnet (AZ1)"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Public Subnet (AZ2)"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Subnet (AZ1)"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Subnet (AZ2)"

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Bastion SSH access"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"

  ClientGrpSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Http Access for the MSK Client Group Cluster"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Public Routes"

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Routes (AZ1)"

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Routes (AZ2)"

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  VPCPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref VPC
      PeerVpcId:
        Fn::ImportValue: !Sub "${MSKStackName}:VPC"

  PeeringRoute1ClientToMSKPrivateAZ1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock:
        Fn::ImportValue: !Sub "${MSKStackName}:VpcCIDR"
      RouteTableId: !Ref PrivateRouteTable1
      VpcPeeringConnectionId:
        Ref: VPCPeeringConnection

  PeeringRoute2ClientToMSKPrivateAZ2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock:
        Fn::ImportValue: !Sub "${MSKStackName}:VpcCIDR"
      RouteTableId: !Ref PrivateRouteTable2
      VpcPeeringConnectionId:
        Ref: VPCPeeringConnection

  PeeringRoute3MSKToClientPrivateAZ1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: !Ref VpcCIDR
      RouteTableId:
        Fn::ImportValue: !Sub "${MSKStackName}:PrivateRouteTable1"
      VpcPeeringConnectionId:
        Ref: VPCPeeringConnection

  PeeringRoute4MSKToClientPrivateAZ2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: !Ref VpcCIDR
      RouteTableId:
        Fn::ImportValue: !Sub "${MSKStackName}:PrivateRouteTable2"
      VpcPeeringConnectionId:
        Ref: VPCPeeringConnection

  SecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the Client ASG
      GroupId:
        Fn::ImportValue: !Sub "${MSKStackName}:MSKSecurityGroupID"
      IpProtocol: tcp
      FromPort: 2181
      ToPort: 2181
      CidrIp: !Ref VpcCIDR

  SecurityGroupIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the Client ASG
      GroupId:
        Fn::ImportValue: !Sub "${MSKStackName}:MSKSecurityGroupID"
      IpProtocol: tcp
      FromPort: 9094
      ToPort: 9094
      CidrIp: !Ref VpcCIDR

  SecurityGroupIngress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the Client ASG
      GroupId:
        Fn::ImportValue: !Sub "${MSKStackName}:MSKSecurityGroupID"
      IpProtocol: tcp
      FromPort: 9094
      ToPort: 9094
      CidrIp: !Ref VpcCIDR

  AutoScalingGroup:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    CreationPolicy:
      ResourceSignal:
        Count: !Ref DesiredCapacity
        Timeout: "PT5M"
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true
    Properties:
      Cooldown: "300"
      DesiredCapacity: !Ref DesiredCapacity
      HealthCheckGracePeriod: "300"
      HealthCheckType: ELB
      LaunchConfigurationName: !Ref LaunchConfiguration
      LoadBalancerNames:
        - !Ref ELB
      MaxSize: !Ref MaxSize
      MinSize: !Ref MinSize
      VPCZoneIdentifier:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  EC2SetupRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: ec2-s3-access
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                Resource: '*'

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref EC2SetupRole

  LaunchConfiguration:
    Type: "AWS::AutoScaling::LaunchConfiguration"
    Properties:
      ImageId: !Ref EC2Ami
      InstanceType: t3.small
      KeyName: !Ref KeyPair
      SecurityGroups:
        - !Ref ClientGrpSecurityGroup
      IamInstanceProfile: !Ref InstanceProfile
      UserData:
        "Fn::Base64":
          !Sub |
          #!/bin/bash
          yum update -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfiguration --configsets www --region ${AWS::Region}
          aws s3 cp s3://<your-resources-bucket>/dxl-msk-producer-1.0.0-SNAPSHOT.jar /home/ec2-user
          aws s3 cp s3://<your-resources-bucket>/mskClientKeystore.jks /home/ec2-user
          aws s3 cp s3://<your-resources-bucket>/runRestClient.sh /home/ec2-user
          sudo chmod 777 runRestClient.sh
          cat > /etc/profile.d/load_env.sh << 'EOF'
          export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk
          export BROKERS=${Brokers}
          sudo nohup /home/ec2-user/runRestClient.sh ${Brokers} &
          EOF
          sudo chmod 777 /etc/profile.d/load_env.sh
          yum -y update
          sudo nohup /home/ec2-user/runRestClient.sh ${Brokers} &
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource AutoScalingGroup --region ${AWS::Region}
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          www:
            - "configure_cfn"
            - "install_www"
        configure_cfn:
          files:
            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
              content: !Sub |
                [cfn-auto-reloader-hook]
                triggers=post.update
                path=Resources.LaunchConfiguration.Metadata.AWS::CloudFormation::Init
                action=/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfiguration --configsets www --region ${AWS::Region}
              mode: "000400"
              owner: root
              group: root
            /etc/cfn/cfn-hup.conf:
              content: !Sub |
                [main]
                stack=${AWS::StackId}
                region=${AWS::Region}
                verbose=true
                interval=5
              mode: "000400"
              owner: root
              group: root
          services:
            sysvinit:
              cfn-hup:
                enabled: "true"
                ensureRunning: "true"
                files:
                  - "/etc/cfn/cfn-hup.conf"
                  - "/etc/cfn/hooks.d/cfn-auto-reloader.conf"
        install_www:
          packages:
            yum:
              java-1.8.0-openjdk-devel: []
              httpd: []
          files:
            /var/www/html/index.html:
              content: '<h1>Test Page OK</h1>'
              mode: '000644'
              owner: root
              group: root
          services:
            sysvinit:
              httpd:
                enabled: "true"
                ensureRunning: "true"

  ELB:
    Type: "AWS::ElasticLoadBalancing::LoadBalancer"
    Properties:
      CrossZone: true
      Listeners:
        - InstancePort: "8080"
          InstanceProtocol: HTTP
          LoadBalancerPort: "8080"
          Protocol: HTTP
      HealthCheck:
        Target: HTTP:80/
        HealthyThreshold: "2"
        UnhealthyThreshold: "5"
        Interval: "30"
        Timeout: "5"
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ClientGrpSecurityGroup

  CloudMapNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: !Sub "content.local"
      Vpc: !Ref VPC

  Bastion:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2Ami
      InstanceType: t3.small
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      SubnetId: !Ref PublicSubnet1

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}:VPC"

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::StackName}:PublicSubnet1"

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::StackName}:PublicSubnet2"

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}:PrivateSubnet1"

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}:PrivateSubnet2"

  PrivateRouteTable1:
    Description: Private RouteTable in AZ1
    Value: !Ref PrivateRouteTable1
    Export:
      Name: !Sub "${AWS::StackName}:PrivateRouteTable1"

  PrivateRouteTable2:
    Description: Private RouteTable in AZ2
    Value: !Ref PrivateRouteTable2
    Export:
      Name: !Sub "${AWS::StackName}:PrivateRouteTable2"

  VpcCIDR:
    Description: VPC CIDR
    Value: !Ref VpcCIDR
    Export:
      Name: !Sub "${AWS::StackName}:VpcCIDR"

  CloudMapNamespaceId:
    Description: The id of to the Cloud Map namespace
    Value: !GetAtt CloudMapNamespace.Id
    Export:
      Name: !Sub "${AWS::StackName}:CloudMapNamespaceId"

  ClientGrpSecurityGroupID:
    Description: The ID of the security group created for the MSK clusters
    Value: !GetAtt
      - ClientGrpSecurityGroup
      - GroupId
    Export:
      Name: !Sub "${AWS::StackName}:ClientGrpSecurityGroupID"

  Endpoint:
    Description: Application Address
    Value: !Join ["", ["http://", !GetAtt ELB.DNSName, ":8080/msk"]]
    Export:
      Name: !Sub "${AWS::StackName}:Endpoint"
